Add Pydantic schema and wrapper for function extraction
Introduces a ParameterInputSchema Pydantic model to validate and structure parameters for function extraction, and adds an extract_function_source wrapper that accepts this schema. Also fixes a typo in the 'recursive_helper' parameter and updates usage in the notebook to use the new schema and wrapper.

--- a/code_parser_tester.ipynb
+++ b/code_parser_tester.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "id": "e6687368",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "id": "4e7a7a67",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
     "    *,\n",
     "    base_path: str | Path,\n",
     "    detailed_functions: bool = False,\n",
-    "    reursive_helper: bool = False,\n",
+    "    recursive_helper: bool = False,\n",
     "    aggressive_fallback: bool = False,  # set True to allow cross-project name fallback\n",
     "    # tool_context: ToolContext\n",
     ") -> Dict[str, Any]:\n",
@@ -279,7 +279,7 @@
     "                       from calls inside the target, searching across the project.\n",
     "      base_path: Project root directory. Only files under this root are considered.\n",
     "      detailed_functions: If True, include detailed information about function arguments and return types.\n",
-    "      reursive_helper: If True, include helper functions found in the same file.\n",
+    "      recursive_helper: If True, include helper functions found in the same file.\n",
     "      aggressive_fallback: If True, when we can't prove a binding, include all\n",
     "                           same-named top-level functions found across the project.\n",
     "      tool_context: Tool context (optional for session actions).\n",
@@ -408,7 +408,7 @@
     "                    func_or_qualname=f,\n",
     "                    include_helpers=detailed_functions,\n",
     "                    base_path=base_path,\n",
-    "                    detailed_functions=reursive_helper,\n",
+    "                    detailed_functions=recursive_helper,\n",
     "                ))\n",
     "        else:\n",
     "            helper_function_paths_final = helper_function_paths\n",
@@ -425,7 +425,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
+   "id": "61c4ce7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, Field, field_validator, model_validator  # Pydantic v2\n",
+    "\n",
+    "class ParameterInputSchema(BaseModel):\n",
+    "    function_path: str = Field(str, alias=\"function_path\")\n",
+    "    include_helpers: bool = Field(False, alias=\"include_helpers\")\n",
+    "    base_path: str = Field(str, alias=\"base_path\")\n",
+    "    detailed_functions: bool = Field(False, alias=\"detailed_functions\")\n",
+    "    recursive_helper: bool = Field(False, alias=\"recursive_helper\")\n",
+    "    aggressive_fallback: bool = Field(False, alias=\"aggressive_fallback\")\n",
+    "\n",
+    "    # allow using field names instead of aliases and vice-versa\n",
+    "    model_config = dict(populate_by_name=True)\n",
+    "\n",
+    "    # @field_validator(\"base_path\", mode=\"before\")\n",
+    "    # @classmethod\n",
+    "    # def _coerce_to_path(cls, v):\n",
+    "    #     return Path(v).expanduser() if not isinstance(v, Path) else v\n",
+    "\n",
+    "    # @model_validator(mode=\"after\")\n",
+    "    # def _validate_paths(self):\n",
+    "    #     # Convert to Path\n",
+    "    #     self.base_path = Path(self.base_path).resolve()\n",
+    "    #     self.file_path = Path(self.file_path).resolve()\n",
+    "\n",
+    "    #     if not self.file_path.exists():\n",
+    "    #         raise ValueError(f\"file_path does not exist: {self.file_path}\")\n",
+    "    #     if not self.file_path.is_file():\n",
+    "    #         raise ValueError(\"file_path must be a file\")\n",
+    "\n",
+    "    #     # Ensure file_path is within base_path\n",
+    "    #     try:\n",
+    "    #         self.file_path.relative_to(self.base_path)\n",
+    "    #     except ValueError as e:\n",
+    "    #         raise ValueError(\n",
+    "    #             f\"file_path must be under base_path\\n  file: {self.file_path}\\n  base: {self.base_path}\"\n",
+    "    #         ) from e\n",
+    "    #     return self\n",
+    "\n",
+    "    # Back-compat property for code that still references the misspelling\n",
+    "    @property\n",
+    "    def reursive_helper(self) -> bool:\n",
+    "        return self.recursive_helper\n",
+    "\n",
+    "    def to_kwargs(self) -> Dict[str, Any]:\n",
+    "        \"\"\"Map schema to extract_function_source_ast kwargs (preserves original param names).\"\"\"\n",
+    "        path, func = create_file_path(str(self.base_path), str(self.function_path))\n",
+    "        return {\n",
+    "            \"file_path\": path,\n",
+    "            \"func_or_qualname\": func,\n",
+    "            \"include_helpers\": self.include_helpers,\n",
+    "            \"base_path\": str(self.base_path),\n",
+    "            \"detailed_functions\": self.detailed_functions,\n",
+    "            \"recursive_helper\": self.recursive_helper,   # keep original name expected by your function\n",
+    "            \"aggressive_fallback\": self.aggressive_fallback,\n",
+    "        }\n",
+    "\n",
+    "def extract_function_source(\n",
+    "        params: ParameterInputSchema,  # set True to allow cross-project name fallback\n",
+    "        # tool_context: ToolContext\n",
+    "    ) -> Dict[str, Any]:\n",
+    "    \"\"\"\n",
+    "    Wrapper around `extract_function_source_ast` that accepts a validated\n",
+    "    `ParameterInputSchema` and forwards its fields as keyword arguments.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    params : ParameterInputSchema\n",
+    "        Contains:\n",
+    "          - function_path (str): Path to the function/method to extract.\n",
+    "          - include_helpers (bool): If True, also return helper function *paths* discovered\n",
+    "            from calls inside the target, searching across the project.\n",
+    "          - base_path (str): Project root directory. Only files under this root are considered.\n",
+    "          - detailed_functions (bool): If True, include detailed information about function\n",
+    "            arguments and return types.\n",
+    "          - recursive_helper (bool): If True, include helper functions found in the same file.\n",
+    "          - aggressive_fallback (bool): If True, when binding can't be proven, include all\n",
+    "            same-named top-level functions found across the project.\n",
+    "    tool_context : ToolContext\n",
+    "        Tool context (e.g., session/runtime context) passed through to the extractor.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    Dict[str, Any]\n",
+    "        {\n",
+    "          \"code\": str,\n",
+    "          \"start_line\": int,\n",
+    "          \"end_line\": int,\n",
+    "          \"function\": str,\n",
+    "          \"file\": str,\n",
+    "          \"helpers\": List[str] | List[Dict[str, Any]]  # depends on detailed_helpers flags\n",
+    "        }\n",
+    "    \"\"\"\n",
+    "    return extract_function_source_ast(\n",
+    "        # tool_context=tool_context,\n",
+    "        **params.to_kwargs(),\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b1d07c27",
    "metadata": {},
    "outputs": [
@@ -564,13 +669,22 @@
    "source": [
     "path, func = create_file_path(BASE_PATH, Function_Path)\n",
     "print(path, \"\\n\"+func+\"()\")\n",
-    "out = extract_function_source_ast(\n",
-    "    file_path=path,\n",
-    "    func_or_qualname=func,\n",
-    "    include_helpers=True,\n",
-    "    base_path=BASE_PATH,\n",
-    "    detailed_functions=True,\n",
-    "    reursive_helper=True,\n",
+    "# out = extract_function_source_ast(\n",
+    "#     file_path=path,\n",
+    "#     func_or_qualname=func,\n",
+    "#     include_helpers=True,\n",
+    "#     base_path=BASE_PATH,\n",
+    "#     detailed_functions=True,\n",
+    "#     reursive_helper=True,\n",
+    "# )\n",
+    "out = extract_function_source(\n",
+    "    params=ParameterInputSchema(\n",
+    "        function_path=Function_Path,\n",
+    "        include_helpers=True,\n",
+    "        base_path=BASE_PATH,\n",
+    "        detailed_functions=True,\n",
+    "        recursive_helper=True,\n",
+    "    )\n",
     ")\n",
     "import json\n",
     "print(json.dumps(out, indent=2))\n",
@@ -589,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "id": "d75af12c",
    "metadata": {},
    "outputs": [
@@ -600,14 +714,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\JonathanChackoPattas\\OneDrive - Maritime Support Solutions\\Desktop\\MSS-Automation\\venv-windows\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3587: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
